# learnosity-poc

./: CLAUDE.md  learnosity-fastapi.code-workspace
backend/: README.md  config.py  main.py  pyproject.toml  test_item_creation.py  test_main.py
frontend/: package-lock.json
frontend/src/: App.css  App.tsx
frontend/src/components/: LearnosityAssessment.tsx
