[project]
name = "learnosity-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "learnosity-sdk>=0.3.12",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

